--- a/PlanetWallet/Resources/Base.lproj/1_Splash.storyboard
+++ b/PlanetWallet/Resources/Base.lproj/1_Splash.storyboard
@@ -17,7 +17,7 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
@@ -33,7 +33,7 @@
                 <viewControllerPlaceholder storyboardName="2_PinCode" referencedIdentifier="PinCodeRegistrationController" id="gRa-zE-Y3q" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LRk-ru-mKQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="780" y="19"/>
+            <point key="canvasLocation" x="717" y="348"/>
         </scene>
     </scenes>
 </document>
