--- a/PlanetWallet/Resources/2_PinCode.storyboard
+++ b/PlanetWallet/Resources/2_PinCode.storyboard
@@ -132,19 +132,19 @@
                                 <rect key="frame" x="0.0" y="44" width="375" height="362"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="verification code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QeC-qN-REx" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="71.333333333333329" y="119.66666666666667" width="232.33333333333337" height="40.666666666666671"/>
+                                        <rect key="frame" x="84.333333333333329" y="130" width="206.66666666666669" height="32.666666666666657"/>
                                         <fontDescription key="fontDescription" name="WorkSans-Bold" family="Work Sans" pointSize="28"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter the 4 digit + alphabet" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wP7-nu-37l" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="79" y="169.33333333333334" width="217" height="23.333333333333343"/>
+                                        <rect key="frame" x="90.666666666666686" y="171.66666666666666" width="194" height="18.666666666666657"/>
                                         <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="16"/>
                                         <color key="textColor" red="0.36078431370000003" green="0.34901960780000002" blue="0.3921568627" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="oTs-fe-2CY" customClass="PinView" customModule="PlanetWallet" customModuleProvider="target">
-                                        <rect key="frame" x="100.66666666666669" y="244.33333333333331" width="174" height="12"/>
+                                        <rect key="frame" x="100.66666666666669" y="242" width="174" height="12"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="12" id="jKi-ey-Vck"/>
@@ -188,6 +188,9 @@
                         <outlet property="titleLb" destination="QeC-qN-REx" id="8ev-fr-GRs"/>
                         <segue destination="Fx2-3Q-ztL" kind="show" identifier="pincodecertification_to_walletadd" animates="NO" id="WKf-tH-rxL"/>
                         <segue destination="4dR-O6-8zh" kind="show" identifier="pincodecertification_to_main" animates="NO" id="JDt-4c-Y7h"/>
+                        <segue destination="TTs-8X-dJK" kind="show" identifier="pincodecertification_to_pincoderegistration" id="f9N-gD-wbp"/>
+                        <segue destination="aAK-og-Lal" kind="presentation" identifier="pincodecertification_to_mnemonicexport" modalPresentationStyle="fullScreen" id="oQS-nA-k7l"/>
+                        <segue destination="8oz-5I-Pja" kind="presentation" identifier="pincodecertification_to_privatekeyexport" modalPresentationStyle="fullScreen" modalTransitionStyle="coverVertical" id="j75-8V-mct"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0UT-ZS-r2n" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -209,6 +212,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Vjb-0h-4hG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1362" y="191"/>
+        </scene>
+        <!--MnemonicExportController-->
+        <scene sceneID="sDW-gF-It7">
+            <objects>
+                <viewControllerPlaceholder storyboardName="7_1_Planet" referencedIdentifier="MnemonicExportController" id="aAK-og-Lal" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pck-z6-4vt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1370" y="248"/>
+        </scene>
+        <!--PrivateKeyExportController-->
+        <scene sceneID="Erz-bK-HuL">
+            <objects>
+                <viewControllerPlaceholder storyboardName="7_1_Planet" referencedIdentifier="PrivateKeyExportController" id="8oz-5I-Pja" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="d7c-fx-uQr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1333" y="300"/>
         </scene>
     </scenes>
 </document>
