--- a/PlanetWallet/Resources/4_Main.storyboard
+++ b/PlanetWallet/Resources/4_Main.storyboard
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="2bt-tB-4P6">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,7 +15,7 @@
             <objects>
                 <navigationController storyboardIdentifier="mainNavigationController" id="2bt-tB-4P6" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="zUe-Qr-XZs">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -32,9 +31,69 @@
             <objects>
                 <viewController storyboardIdentifier="MainController" id="pBn-Jn-OOA" customClass="MainController" customModule="PlanetWallet" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="gpI-PO-C1H" customClass="PWView" customModule="PlanetWallet" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Na1-r1-juP" userLabel="BgPlanetContainer">
+                                <rect key="frame" x="-9" y="-150" width="393" height="393"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IKe-el-f6a" userLabel="BgPlanetView" customClass="PlanetView" customModule="PlanetWallet" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="393"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="data" value="문규송"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                    <view alpha="0.90000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wqQ-cu-t5w" userLabel="DimView" customClass="GradientView" customModule="PlanetWallet" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="393"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="firstColor">
+                                                <color key="value" white="0.0" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="color" keyPath="secondColor">
+                                                <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isHorizontal" value="NO"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="IKe-el-f6a" firstAttribute="top" secondItem="Na1-r1-juP" secondAttribute="top" id="3cV-2m-994"/>
+                                    <constraint firstAttribute="trailing" secondItem="wqQ-cu-t5w" secondAttribute="trailing" id="A1a-wo-mfv"/>
+                                    <constraint firstItem="wqQ-cu-t5w" firstAttribute="top" secondItem="Na1-r1-juP" secondAttribute="top" id="C2q-Oi-Wd2"/>
+                                    <constraint firstAttribute="trailing" secondItem="IKe-el-f6a" secondAttribute="trailing" id="E4x-6k-lHI"/>
+                                    <constraint firstItem="IKe-el-f6a" firstAttribute="leading" secondItem="Na1-r1-juP" secondAttribute="leading" id="HZM-2w-wuy"/>
+                                    <constraint firstAttribute="bottom" secondItem="IKe-el-f6a" secondAttribute="bottom" id="JU2-0S-LOf"/>
+                                    <constraint firstAttribute="bottom" secondItem="wqQ-cu-t5w" secondAttribute="bottom" id="Ryt-0a-wtC"/>
+                                    <constraint firstItem="wqQ-cu-t5w" firstAttribute="leading" secondItem="Na1-r1-juP" secondAttribute="leading" id="UkN-eD-w7U"/>
+                                    <constraint firstAttribute="width" secondItem="Na1-r1-juP" secondAttribute="height" multiplier="1:1" id="hFN-Jl-BTe"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sj3-TY-bbB">
+                                <rect key="frame" x="0.0" y="88" width="375" height="724"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="gy3-pp-zw7">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="330"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </view>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="guR-Y4-RQB">
+                                        <rect key="frame" x="0.0" y="358" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="guR-Y4-RQB" id="TlO-67-3RG">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="pBn-Jn-OOA" id="o5F-bK-6cA"/>
+                                    <outlet property="delegate" destination="pBn-Jn-OOA" id="iiy-pL-dGx"/>
+                                </connections>
+                            </tableView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3px-DW-HXl" customClass="NavigationBar" customModule="PlanetWallet" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="88"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -71,16 +130,26 @@
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="m4r-lL-dV8" firstAttribute="trailing" secondItem="3px-DW-HXl" secondAttribute="trailing" id="DES-8p-8xT"/>
-                            <constraint firstItem="3px-DW-HXl" firstAttribute="leading" secondItem="m4r-lL-dV8" secondAttribute="leading" id="Xkc-uf-D9A"/>
+                            <constraint firstItem="Na1-r1-juP" firstAttribute="leading" secondItem="gpI-PO-C1H" secondAttribute="leadingMargin" constant="-25" id="11R-mj-J29"/>
+                            <constraint firstAttribute="trailing" secondItem="3px-DW-HXl" secondAttribute="trailing" id="DES-8p-8xT"/>
+                            <constraint firstItem="sj3-TY-bbB" firstAttribute="top" secondItem="3px-DW-HXl" secondAttribute="bottom" id="EZl-qb-ism"/>
+                            <constraint firstItem="Na1-r1-juP" firstAttribute="top" secondItem="gpI-PO-C1H" secondAttribute="top" constant="-150" id="RYa-rQ-ufP"/>
+                            <constraint firstItem="sj3-TY-bbB" firstAttribute="trailing" secondItem="gpI-PO-C1H" secondAttribute="trailing" id="X4L-Lx-9xI"/>
+                            <constraint firstItem="3px-DW-HXl" firstAttribute="leading" secondItem="gpI-PO-C1H" secondAttribute="leading" id="Xkc-uf-D9A"/>
+                            <constraint firstItem="sj3-TY-bbB" firstAttribute="leading" secondItem="gpI-PO-C1H" secondAttribute="leading" id="bB6-i9-szl"/>
                             <constraint firstItem="3px-DW-HXl" firstAttribute="top" secondItem="gpI-PO-C1H" secondAttribute="top" id="bgT-iZ-Z9j"/>
+                            <constraint firstItem="sj3-TY-bbB" firstAttribute="bottom" secondItem="gpI-PO-C1H" secondAttribute="bottom" id="piS-I9-zI6"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Na1-r1-juP" secondAttribute="trailing" constant="-25" id="rtV-Do-wCN"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="m4r-lL-dV8"/>
                     </view>
                     <navigationItem key="navigationItem" id="sQ5-Qt-e8Q"/>
                     <nil key="simulatedTopBarMetrics"/>
                     <connections>
+                        <outlet property="bgPlanetContainer" destination="Na1-r1-juP" id="axZ-i3-fvV"/>
+                        <outlet property="bgPlanetView" destination="IKe-el-f6a" id="4ib-6l-LDa"/>
+                        <outlet property="headerView" destination="gy3-pp-zw7" id="IfF-5E-YaS"/>
                         <outlet property="naviBar" destination="3px-DW-HXl" id="47j-DX-T4G"/>
+                        <outlet property="tableView" destination="sj3-TY-bbB" id="jpb-mv-XB0"/>
                         <segue destination="2Da-Zc-beW" kind="show" identifier="main_to_tokenadd" animates="NO" id="kTb-bG-rs0"/>
                         <segue destination="jYR-7T-aVN" kind="show" identifier="main_to_transfer" animates="NO" id="ggG-BA-aGA"/>
                         <segue destination="oky-eY-4iW" kind="show" identifier="main_to_setting" animates="NO" id="JN4-AP-6ud"/>
@@ -88,7 +157,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tem-yv-J6n" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-17" y="125"/>
+            <point key="canvasLocation" x="-18.399999999999999" y="124.13793103448276"/>
         </scene>
         <!--TokenAddController-->
         <scene sceneID="n7r-vo-c5t">
