--- a/PlanetWallet/Views/5_Token/Cells/TokenCell.xib
+++ b/PlanetWallet/Views/5_Token/Cells/TokenCell.xib
@@ -62,14 +62,14 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="imageCheckboxOn" translatesAutoresizingMaskIntoConstraints="NO" id="JS5-kq-Hsy" customClass="PWImageView" customModule="PlanetWallet" customModuleProvider="target">
-                    <rect key="frame" x="407" y="15" width="40" height="40"/>
+                    <rect key="frame" x="414" y="22.666666666666671" width="25" height="25"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="40" id="1W1-Cx-oiq"/>
-                        <constraint firstAttribute="height" constant="40" id="Iyg-ZI-Rbk"/>
+                        <constraint firstAttribute="width" constant="25" id="1W1-Cx-oiq"/>
+                        <constraint firstAttribute="height" constant="25" id="Iyg-ZI-Rbk"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                            <real key="value" value="20"/>
+                            <real key="value" value="12.5"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                 </imageView>
@@ -85,7 +85,7 @@
                 <constraint firstItem="V0M-P5-NyR" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="1Dq-WB-Xew"/>
                 <constraint firstItem="JS5-kq-Hsy" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="398-iF-38Y"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="rB8-tq-OT5" secondAttribute="trailing" id="71A-pZ-IwJ"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="JS5-kq-Hsy" secondAttribute="trailing" constant="14" id="9pD-Cn-MRG"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="JS5-kq-Hsy" secondAttribute="trailing" constant="22" id="9pD-Cn-MRG"/>
                 <constraint firstItem="owr-nd-dg6" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="20" id="Df2-GG-zML"/>
                 <constraint firstItem="rB8-tq-OT5" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="G2c-nC-FR4"/>
                 <constraint firstItem="V0M-P5-NyR" firstAttribute="leading" secondItem="owr-nd-dg6" secondAttribute="trailing" constant="10" id="UhM-fz-J1X"/>
