--- a/PlanetWallet/Views/7_Setting/Cells/NoticeCell.xib
+++ b/PlanetWallet/Views/7_Setting/Cells/NoticeCell.xib
@@ -36,12 +36,22 @@
                             <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="color" keyPath="themeTextColor">
+                                    <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gY2-9Z-3uU" customClass="PWLabel" customModule="PlanetWallet" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="27.5" width="37.5" height="20.5"/>
                             <fontDescription key="fontDescription" name="WorkSans-Regular" family="Work Sans" pointSize="14"/>
                             <color key="textColor" name="detailTextLight"/>
                             <nil key="highlightedColor"/>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="color" keyPath="themeTextColor">
+                                    <color key="value" name="detailTextDark"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
                         </label>
                     </subviews>
                 </stackView>
@@ -51,6 +61,9 @@
                         <constraint firstAttribute="width" constant="20" id="JSh-K9-Bu5"/>
                         <constraint firstAttribute="height" constant="20" id="zcH-Wc-rKU"/>
                     </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="image" keyPath="themeImage" value="imageArrowRightGray"/>
+                    </userDefinedRuntimeAttributes>
                 </imageView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="StW-Vk-jdN">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
@@ -58,26 +71,53 @@
                         <action selector="didTouched:" destination="-1" eventType="touchUpInside" id="nWj-zh-Fp3"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UTa-ac-CUU" customClass="PWView" customModule="PlanetWallet" customModuleProvider="target">
+                    <rect key="frame" x="20" y="79" width="335" height="1"/>
+                    <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="ypr-z2-9Lu"/>
+                    </constraints>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="color" keyPath="themeBackgroundColor">
+                            <color key="value" name="borderDark"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="StW-Vk-jdN" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="0h8-GF-k7M"/>
                 <constraint firstItem="rE8-92-bVv" firstAttribute="leading" secondItem="Eac-cd-lhq" secondAttribute="trailing" constant="10" id="14y-Ag-dHK"/>
                 <constraint firstItem="Eac-cd-lhq" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="8em-8P-03j"/>
+                <constraint firstAttribute="bottom" secondItem="UTa-ac-CUU" secondAttribute="bottom" id="CP1-z1-uor"/>
                 <constraint firstItem="Eac-cd-lhq" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="GOo-zo-FWz"/>
                 <constraint firstAttribute="trailing" secondItem="StW-Vk-jdN" secondAttribute="trailing" id="Gdy-CI-XRD"/>
                 <constraint firstAttribute="trailing" secondItem="rE8-92-bVv" secondAttribute="trailing" constant="13" id="JyG-73-ehf"/>
                 <constraint firstAttribute="bottom" secondItem="StW-Vk-jdN" secondAttribute="bottom" id="RZ7-3Z-rM1"/>
+                <constraint firstItem="UTa-ac-CUU" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="TT0-Nb-mJ7"/>
+                <constraint firstAttribute="trailing" secondItem="UTa-ac-CUU" secondAttribute="trailing" constant="20" id="a3v-WM-DZc"/>
                 <constraint firstItem="StW-Vk-jdN" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="b4w-LZ-kx1"/>
                 <constraint firstItem="rE8-92-bVv" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="mLW-1x-9sJ"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="color" keyPath="themeBackgroundColor">
+                    <color key="value" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
             <point key="canvasLocation" x="35.507246376811594" y="34.821428571428569"/>
         </view>
     </objects>
     <resources>
         <image name="imageArrowRightBlue" width="30" height="30"/>
+        <image name="imageArrowRightGray" width="30" height="30"/>
+        <namedColor name="borderDark">
+            <color red="0.11764705882352941" green="0.11764705882352941" blue="0.15686274509803921" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="detailTextDark">
+            <color red="0.36078431372549019" green="0.34901960784313724" blue="0.39215686274509803" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="detailTextLight">
             <color red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
